fix(material-experimental/mdc-form-field): add stronger focus indicator in high-contrast mode
Sets up a stronger focus indicator for form fields in high-contrast
mode.

--- a/src/material-experimental/mdc-form-field/_mdc-text-field-structure-overrides.scss
+++ b/src/material-experimental/mdc-form-field/_mdc-text-field-structure-overrides.scss
@@ -1,5 +1,4 @@
 @use 'form-field-sizing';
-@use '../../cdk/a11y';
 
 // Mixin that can be included to override the default MDC text-field
 // styles to fit our needs. See individual comments for context on why
@@ -113,11 +112,4 @@
     content: none;
   }
 
-  // The outline of the `fill` appearance is achieved through a background color
-  // which won't be visible in high contrast mode. Add an outline to replace it.
-  .mat-form-field-appearance-fill .mat-mdc-text-field-wrapper {
-    @include a11y.high-contrast(active, off) {
-      outline: solid 1px;
-    }
-  }
 }
